<resources>
    <string name="app_name">Viet Nails - Chủ Tiệm / Thợ</string>
    <string name="btn_ok">OK</string>
    <string name="btn_ok_1">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_new_customer">New Customer</string>
    <string name="btn_feedback">Feedback</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="btn_sign_up_salon">Sign Up Salon</string>
    <string name="btn_send_feedback">Send feedback</string>
    <string name="btn_close">Close</string>
    <string name="msg_login_success">Login success</string>
    <string name="msg_sign_up_success">Sign up success</string>
    <string name="error_blank_phone">Please enter phone number!</string>
    <string name="error_type_phone_not_enough">Phone must be 10 characters long</string>
    <string name="error_code_already_exist">This Code is already exist !</string>
    <string name="error_code_blank">Please enter voucher code!</string>
    <string name="error_code_not_enough">Code must be at least 3 characters!</string>
    <string name="error_blank_password_2">Please enter password</string>
    <string name="error_blank_admin_name">Please enter owner name</string>
    <string name="error_blank_admin_email">Please enter owner email</string>
    <string name="error_blank_salon_name">Please enter salon\'s name</string>
    <string name="error_blank_owner_name">Please enter owner\'s name</string>
    <string name="error_blank_salon_address">Please enter salon\'s address</string>
    <string name="error_blank_salon_phone">Please enter salon\'s phone number</string>
    <string name="error_blank_salon_description">Please enter salon\'s introduction</string>
    <string name="error_loading_photo">Error loading photo</string>
    <string name="error_blank_service_name">Service\'s Name must not be blank</string>
    <string name="error_blank_service_avatar">Please add service avatar</string>
    <string name="error_blank_staff_avatar">Please add staff avatar</string>
    <string name="error_blank_service_price">Price must not be blank</string>
    <string name="error_blank_firstname">First name must not be blank</string>
    <string name="error_blank_lastname">Last name must not be blank</string>
    <string name="error_not_correct_email">Please enter the correct email</string>
    <string name="msg_sent_feedback">Feedback has been sent successfully</string>
    <string name="error_blank_name">Name should not be blank</string>
    <string name="error_blank_staff_id">Please select a staff</string>
    <string name="error_blank_customer_id">Please select a customer</string>
    <string name="error_pls_select_working_time">Please select working time type!</string>
    <string name="error_pls_select_gender">Please select gender!</string>
    <string name="error_pls_select_role">Please select role for reset password!</string>
    <string name="error_pls_select_position">Please select position!</string>
    <string name="error_not_enough_image_count">Please select at least one image</string>
    <string name="error_data_signup_support_not_valid">Please select at least one image or leave us your contact</string>
    <string name="error_not_enough_service">Please select at least one service</string>
    <string name="error_not_enough_staff">Please select at least one staff</string>
    <string name="error_blank_date_time">Please select date and time</string>
    <string name="error_empty_services">Please select the service</string>
    <string name="error_blank_email">Email should not be blank</string>
    <string name="error_blank_content">Content should not be blank</string>
    <string name="message_logout_app">Are you sure you want to logout?</string>
    <string name="title_logout_owner">Logout Owner</string>
    <string name="title_logout_client">Logout Client</string>
    <string name="btn_yes_logout">Yes, logout</string>
    <string name="btn_edit_profile">Edit Profile</string>
    <string name="btn_save">Save</string>
    <string name="msg_profile_update_success">Profile update successful</string>
    <string name="btn_login_owner">Login as a owner</string>
    <string name="btn_login_client">Login as a nail worker</string>
    <string name="error_blank_username">Username should not be blank</string>
    <string name="error_blank_password">Password should not be blank</string>
    <string name="error_blank_password_vn">Mật khẩu không được để trống</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_reject">Reject</string>
    <string name="btn_customer_check_in">Client Walk-in</string>
    <string name="btn_add_new_appointment">Add New Appointment</string>
    <string name="btn_add_appointment">Add Appointment</string>
    <string name="btn_staff_list">Staff List</string>
    <string name="btn_assign">Assign</string>
    <string name="change_password">Change Password</string>
    <string name="update">Update</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_email_optional">Enter your Email (Optional)</string>
    <string name="email_receive_feedback_description">MANAGE THE EMAIL THAT RECEIVE FEEDBACK FROM CUSTOMER</string>
    <string name="email">Email</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="btn_add_new_service">Add New Service</string>
    <string name="btn_add_new_staff">Add New Staff</string>
    <string name="btn_check_in">Check in</string>
    <string name="btn_check_out">Check out</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_edit_1">Edit</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_order_list">Order List</string>
    <string name="btn_active">Active</string>
    <string name="btn_update">Update</string>
    <string name="btn_update_2">Update</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_submit_vn">Hoàn Tất</string>
    <string name="btn_inactive">Inactive</string>
    <string name="btn_order_history">Order History</string>
    <string name="btn_attendance_history">Attendance History</string>
    <string name="service_s_name">Service\'s Name</string>
    <string name="price">Price</string>
    <string name="btn_start_service">Start Service</string>
    <string name="message_remove_appointment" formatted="true">Do you want to remove the appointment with ID: #%d?</string>
    <string name="message_cancel_appointment" formatted="true">Do you want to cancel the appointment with ID: #%d?</string>
    <string name="message_customer_check_in">Do you confirm that this client checked-in at the salon?</string>
    <string name="message_delete_staff" formatted="true">Do you want to delete the "%s" staff?</string>
    <string name="error_empty_reason">Please enter a reason</string>
    <string name="error_empty_service_time">Please select the service time</string>
    <string name="error_service_time_greater_than">Service time must be greater than 0</string>
    <string name="error_empty_duration_time_to_service">Please select the duration time to service</string>
    <string name="btn_finish">Finish Booking</string>
    <string name="error_empty_amount">Please enter total amount</string>
    <string name="error_empty_value">Please enter value</string>
    <string name="error_value_discount_greater_than_0">Value must be greater than 0</string>
    <string name="error_empty_amount_greater_than">Total amount must be greater than 0</string>
    <string name="btn_delete_appointment">Delete Appointment</string>
    <string name="btn_service">Start Service</string>
    <string name="booking_list">Booking List</string>
    <string name="hide_recruitment">Hide post</string>
    <string name="delete_recruitment">Delete post</string>
    <string name="success_delete_recruitment">Delete post successfully!</string>
    <string name="success_hide_recruitment">Hide post successfully!</string>
    <string name="success_show_recruitment">Public post successfully!</string>
    <string name="show_recruitment">Public post</string>
    <string name="create_appointment">Create Appointment</string>
    <string name="message_start_service_success">Start service successfully!</string>
    <string name="your_email">Your Email</string>
    <string name="sample_gmail_com">sample@gmail.com</string>
    <string name="edit">Edit</string>
    <string name="description_2">Candidate details</string>
    <string name="add">Add</string>
    <string name="title_signup_success">Sign Up successfully! Please wait for administrator approval.</string>
    <string name="content_sign_up_success_1">Once your account is approved, we’ll notify you via the app</string>
    <string name="content_sign_up_success">During the review period, you can still log in to edit salon information, add services and add staff, and receive approval notifications from the admin. However, your salon will not appear in the list of 123 Viet Nails that customers can see, and will not receive bookings from customers.</string>
    <string name="btn_back">Back</string>
    <string name="title_apm_cancellation">Appointment Cancellation</string>
    <string name="hint_reason">Tell me what your reason…</string>
    <string name="btn_yes_cancel">Yes, Cancel</string>
    <string name="notice">Notice</string>
    <string name="staff_notice_1">Staffs need to check-in before the Salon can receive service orders and serve customers</string>
    <string name="staff_notice_2">Staffs can check-in during the salon\'s operating hours</string>
    <string name="staff_notice_3">Staffs will automatically check-out when the salon\'s operating hours are over</string>
    <string name="service_name_type">Enter service name (example: Full set)</string>
    <string name="enter_price">Enter price</string>
    <string name="gender">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="year">Year</string>
    <string name="city_and_state_of_residence_create">Where is the salon, what state and city?</string>
    <string name="add_skillset">Enter skill set</string>
    <string name="skillset_create">What skill set are you capable of? (Select or add your skills)</string>
    <string name="willing_to_relocate">Willing to relocate</string>
    <string name="avatar">Avatar</string>
    <string name="local_position">Local Position</string>
    <string name="select_working_place">Select working place</string>
    <string name="years_of_experience">Years of Experience</string>
    <string name="des_2">Please upload a photo of yourself, the beautiful nail designs you have done, your certificates or degrees</string>
    <string name="des_5">Tips: Posting as many photos as you can will help your profile stand out more and easily attract the salon owner.</string>
    <string name="upload">Upload</string>
    <string name="name">Name</string>
    <string name="hint_enter_your_name">Enter your Name</string>
    <string name="label_phone_2">Contact Number</string>
    <string name="local_position_or_willing_to_relocate">Local Position or Willing to Relocate?</string>
    <string name="des_6">In addition to the information above, please describe yourself in more detail here.  This will help the salon owner get to know you better, thereby increasing your chances of getting a job</string>
    <string name="hint_enter_your_experience">Enter your experience</string>
    <string name="upload_my_cv">Upload my cv</string>
    <string name="upload_my_cv_des_1">Your resume will be publicly accessible. You have the option to display, share or conceal your resume as desired</string>
</resources>