<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/size_20"
    tools:context=".views.dialog.MessageDialog">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_16"
        android:text="@string/notice"
       />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20"
        android:textSize="@dimen/text_size_14"
        android:text="@string/staff_notice_1"
      />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10"
        android:textSize="@dimen/text_size_14"
        android:text="@string/staff_notice_2"
      />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10"
        android:textSize="@dimen/text_size_14"
        android:text="@string/staff_notice_3"
      />

    <Button
        android:id="@+id/btnDismiss"
        style="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/size_20"
        android:text="@string/btn_ok" />
</LinearLayout>