<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/size_20"
    android:gravity="center_horizontal"
    tools:context=".views.dialog.MessageDialog">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_tick"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10"
        android:textSize="@dimen/text_size_15"
        android:gravity="center"
        android:text="@string/title_signup_success"
      />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20"
        android:gravity="center"
        android:textColor="@color/color_838383"
        android:text="@string/content_sign_up_success"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10"
        android:gravity="center"
        android:textColor="@color/color_838383"
        android:text="@string/content_sign_up_success_1"
        />

    <Button
        android:id="@+id/btnDismiss"
        style="@style/AppTheme.Button"
        android:background="@drawable/btn_oval"
        android:layout_width="@dimen/size_200"
        android:layout_marginTop="@dimen/size_20"
        android:text="@string/btn_ok" />
</LinearLayout>