<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/size_20"
   >

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_apm_cancellation"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtContents"
        style="@style/AppTheme.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_16"
        android:gravity="top"
        android:maxLength="200"
        android:maxLines="10"
        android:hint="@string/hint_reason"
        android:inputType="textMultiLine"
        android:minLines="5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/offset_horizontal"
            android:background="?selectableItemBackground"
            android:text="@string/btn_back"
            android:textAllCaps="false"
            android:textColor="@color/gray05" />

        <Button
            android:id="@+id/btnDismiss"
            style="@style/AppTheme.Button"
            android:layout_width="wrap_content"
            android:drawableEnd="@drawable/ic_button_check_filled"
            android:drawablePadding="@dimen/size_10"
            android:text="@string/btn_yes_cancel" />
    </LinearLayout>

</LinearLayout>